--- a/rootfs/defaults/cfg/org.jdownloader.gui.notify.gui.BubbleNotifyConfig.json
+++ b/rootfs/defaults/cfg/org.jdownloader.gui.notify.gui.BubbleNotifyConfig.json
@@ -1,17 +1,3 @@
 {
-  "bubblenotifyenabledstate" : "NEVER",
-  "bubblenotifyonnewlinkgrabberlinksenabled" : true,
-  "defaulttimeout" : 15000,
-  "screenid" : "\\Display9999",
-  "bubblenotifyonnewlinkgrabberlinkson" : "LINK",
-  "bubblenotifyonupdateavailableenabled" : true,
-  "bubblenotifyenabledduringsilentmode" : false,
-  "fadeanimationduration" : 900,
-  "bubblenotifystartpausestopenabled" : true,
-  "bubblenotifyonreconnectstartenabled" : true,
-  "animationstartpositionanchor" : "SYSTEM_DEFAULT",
-  "animationendpositionanchor" : "SYSTEM_DEFAULT",
-  "bubblenotifystartstopdownloadsenabled" : false,
-  "finalpositionanchor" : "SYSTEM_DEFAULT",
-  "bubblenotifyoncaptchainbackgroundenabled" : true
+  "bubblenotifyenabledstate" : "NEVER"
 }
