--- a/rootfs/defaults/cfg/org.jdownloader.gui.views.linkgrabber.addlinksdialog.LinkgrabberSettings.json
+++ b/rootfs/defaults/cfg/org.jdownloader.gui.views.linkgrabber.addlinksdialog.LinkgrabberSettings.json
@@ -1,10 +1,3 @@
 {
-  "autoextractionenabled" : true,
-  "variantscolumnalwaysvisible" : false,
-  "linkgrabberautostartenabled" : true,
-  "variouspackageenabled" : true,
-  "latestdownloaddestinationfolder" : "/output",
-  "linkgrabberaddattop" : false,
-  "linkgrabberautoconfirmenabled" : false,
-  "autoconfirmdelay" : 15000
+  "latestdownloaddestinationfolder" : "/output"
 }
