Added the ability to set the MyJDownloader credentials via environment variables.

--- a/appdefs.yml
+++ b/appdefs.yml
@@ -260,7 +260,40 @@ container:
     - /storage
 
   # Environment variables.
-  environment_variables: []
+  environment_variables:
+    - name: MYJDOWNLOADER_EMAIL
+      description: >-
+        Email address of the MyJDownloader account to use.  Note that this can
+        also be configured via the JDownloader GUI.
+      type: public
+      default:
+      unraid_template:
+        title: MyJDownloader Email
+        display: advanced
+        required: false
+        mask: false
+    - name: MYJDOWNLOADER_PASSWORD
+      description: >-
+        Password of the MyJDownloader account to use.  Note that this can
+        also be configured via the JDownloader GUI.
+      type: public
+      default:
+      unraid_template:
+        title: MyJDownloader Password
+        display: advanced
+        required: false
+        mask: false
+    - name: MYJDOWNLOADER_DEVICE_NAME
+      description: >-
+        The name of this JDownloader instance.  Note that this can
+        also be configured via the JDownloader GUI.
+      type: public
+      default:
+      unraid_template:
+        title: MyJDownloader Device Name
+        display: advanced
+        required: false
+        mask: false
 
   # Volumes
   volumes:
