--- a/appdefs.yml
+++ b/appdefs.yml
@@ -68,6 +68,14 @@ app:
           [Click'n'Load]: http://jdownloader.org/knowledge/wiki/glossary/cnl2
           [MyJDownloader browser extension]: https://my.jdownloader.org/apps/
   changelog:
+    - version: 23.01.1
+      date: 2023-01-04
+      changes:
+        - 'Update of the baseimage to version 4.3.1 brings the following changes:'
+        - '2:Control menu can be moved to the right side of the screen.'
+        - '2:Automatic focus of the clipboard text box when opening the control menu.'
+        - '2:Automatic close of the control menu when clicking into the application.'
+        - '2:Rotation of the internal web server log files.'
     - version: 22.12.2
       date: 2022-12-11
       changes:
