Added changelog for version 23.01.2.

--- a/appdefs.yml
+++ b/appdefs.yml
@@ -68,6 +68,10 @@ app:
           [Click'n'Load]: http://jdownloader.org/knowledge/wiki/glossary/cnl2
           [MyJDownloader browser extension]: https://my.jdownloader.org/apps/
   changelog:
+    - version: 23.01.2
+      date: 2023-01-07
+      changes:
+        - 'Restored previous behavior and take ownership of `/output` only, without its content.'
     - version: 23.01.1
       date: 2023-01-04
       changes:
