--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -6,7 +6,7 @@ concurrency:
 
 env:
   DOCKER_IMAGE_NAME: jlesage/jdownloader-2
-  PLATFORMS: linux/amd64,linux/386,linux/arm64/v8
+  PLATFORMS: linux/amd64,linux/386,linux/arm/v7,linux/arm/v8,linux/arm64/v8
 
 on:
   push:
