--- a/appdefs.yml
+++ b/appdefs.yml
@@ -69,6 +69,10 @@ app:
           [Click'n'Load]: http://jdownloader.org/knowledge/wiki/glossary/cnl2
           [MyJDownloader browser extension]: https://my.jdownloader.org/apps/
   changelog:
+    - version: 24.08.1
+      date: 2024-08-02
+      changes:
+        - 'Now using baseimage based on Alpine 3.20.'
     - version: 24.07.1
       date: 2024-07-03
       changes:
