--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,13 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 24.09.1
+      date: 2024-09-29
+      changes:
+        - 'Added mechanism to ease fixing JDownloader startup issue.'
+        - 'Updated baseimage to version 4.6.4, which brings the following changes:'
+        - '2:Fixed web authentication feature with URL path-based reverse proxy.'
+        - '2:Rebuild against latest distro images to get security fixes.'
     - version: 24.08.1
       date: 2024-08-02
       changes:
