--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,14 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 24.12.1
+      date: 2024-12-07
+      changes:
+        - 'Updated baseimage to version 4.6.7, which brings the following changes:'
+        - '2:Fixed web audio feature with URL path-based reverse proxy.'
+        - '2:Fixed TLS secure connection method for VNC that was preventing web access.'
+        - '2:Fixed CJK font installation.'
+        - '2:Rebuild against latest distro images to get security fixes.'
     - version: 24.11.1
       date: 2024-11-21
       changes:
