--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,15 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.06.1
+      date: 2025-06-21
+      changes:
+        - 'Updated baseimage to version 4.8.0, which brings the following changes:'
+        - '2:Added automatic reconnect support of the web interface.'
+        - '2:Added web file manager.'
+        - '2:Updated noVNC to version 1.6.0.'
+        - '2:Updated web UI components (Bootstrap).'
+        - '2:Do not ask VNC password when accessing the web interface and web authentication is enabled.'
     - version: 25.02.1
       date: 2025-02-09
       changes:
