--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,11 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.06.2
+      date: 2025-06-25
+      changes:
+        - 'Updated baseimage to version 4.8.1, which brings the following changes:'
+        - '2:Fixed crash with some binaries on systems using old kernel.'
     - version: 25.06.1
       date: 2025-06-21
       changes:
