--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,12 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.07.1
+      date: 2025-07-05
+      changes:
+        - 'Updated baseimage to version 4.8.2, which brings the following changes:'
+        - '2:Fixed automatic reconnect of the web interface when web authentication is enabled.'
+        - '2:Fixed some resources that could not be accessed behind a reverse proxy based on URL path.'
     - version: 25.06.2
       date: 2025-06-25
       changes:
