Added changelog for version 25.07.2.

--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,11 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.07.2
+      date: 2025-07-27
+      changes:
+        - 'Take ownership of the output directory only if it is not writable.'
+        - 'Updated baseimage to version 4.9.0.'
     - version: 25.07.1
       date: 2025-07-05
       changes:
