--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,13 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.12.2
+      date: 2025-12-20
+      changes:
+        - 'Updated baseimage to version 4.10.4, which brings the following changes:'
+        - '2:Web audio is now automatically re-enabled upon first user interaction.'
+        - '2:Improved robustness of GPU devices detection.'
+        - '2:Command key on Mac devices has been remapped to better match Linux application interactions.'
     - version: 25.12.1
       date: 2025-12-07
       changes:
