Added changelog for version 25.12.3.

--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,11 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 25.12.3
+      date: 2025-12-22
+      changes:
+        - 'Updated baseimage to version 4.10.5, which brings the following changes:'
+        - '2:Fixed key combinations in some Linux applications broken by the Command key remapping.'
     - version: 25.12.2
       date: 2025-12-20
       changes:
