Added changelog for version 26.02.2.

--- a/appdefs.yml
+++ b/appdefs.yml
@@ -87,6 +87,11 @@ app:
 
           https://support.jdownloader.org/en/knowledgebase/article/fix-jdownloader-installation
   changelog:
+    - version: 26.02.2
+      date: 2026-02-19
+      changes:
+        - 'Updated baseimage to version 4.11.1, bringing the following changes:'
+        - '2:Fixed issue where taking ownership of directory would fail.'
     - version: 26.02.1
       date: 2026-02-18
       changes:
